--- a/nix-config/common/linux/i3/config
+++ b/nix-config/common/linux/i3/config
@@ -69,7 +69,7 @@ exec --no-startup-id xinput set-prop "PIXA3854:00 093A:0274 Touchpad" "libinput 
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:ComicShannsMono Nerd Font Mono Regular 14
+font pango:CommitMono Nerd Font Mono Regular 14
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
