--- a/nix-config/common/linux/i3/config
+++ b/nix-config/common/linux/i3/config
@@ -37,7 +37,7 @@ bindsym --release Control+$mod+4 exec --no-startup-id /home/katob/Documents/scri
 
 #To open firefox
 # bindsym $mod+Shift+F exec --no-startup-id firefox
-bindsym $mod+Shift+F exec --no-startup-id floorp
+bindsym $mod+Shift+F exec --no-startup-id librewolf
 
 #to lock screen
 exec --no-startup-id xidlehook --not-when-fullscreen --not-when-audio --timer 600 "systemctl suspend" "" &
@@ -108,7 +108,7 @@ floating_modifier $mod
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec kitty
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec wezterm
 
 # kill focused window
 bindsym $mod+q kill
