--- a/nix-config/common/linux/i3/config
+++ b/nix-config/common/linux/i3/config
@@ -65,11 +65,11 @@ bindsym Control+backslash exec --no-startup-id /home/katob/Documents/scripts/res
 # workspace 10 output DP-1-3.2
 
 # diables touchpad while typing
-exec --no-startup-id xinput set-prop "PIXA3854:00 093A:0274 Touchpad" "libinput Disable While Typing Enabled" 1
+exec --no-startup-id xinput set-prop "PIXA3854:00 093A:0274 Touchpad" "libinput Disable While Typing Enabled" 2
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:CommitMono Nerd Font Mono Regular 14
+font pango:ComicShannsMono Nerd Font Mono Regular 14
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -108,7 +108,7 @@ floating_modifier $mod
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec kitty
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec wezterm
 
 # kill focused window
 bindsym $mod+q kill
