new zed keybindings

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -152,7 +152,7 @@
         "editor.active_wrap_guide": "#c8ccd41a",
         "editor.document_highlight.read_background": "#74ade81a",
         "editor.document_highlight.write_background": "#555a6366",
-        "terminal.background": "#282c33ff",
+        "terminal.background": "#000000",
         "terminal.foreground": "#dce0e5ff",
         "terminal.bright_foreground": "#dce0e5ff",
         "terminal.dim_foreground": "#282c33ff",
