integrating juju on my config repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 lazy-lock.json
 kdeconnect/
 1Password/
@@ -7,3 +6,114 @@ obsidian/
 calibre/
 vivaldi/
 koreader/
+chawan/
+ghostty/
+kmonad/
+pulse/
+wezterm/
+.gsd-keyboard.settings-ported
+BraveSoftware/
+Electron/
+KDE/
+Ladybird/
+Mullvad\ VPN/
+Notepadqq/
+QtProject.conf
+Trolltech.conf
+akregatorrc
+anytype/
+autorandr/
+baloofilerc
+bruno/
+chromium_old/
+dconf/
+direnv/
+dolphinrc
+environment.d/
+evolution/
+exercism/
+falkon/
+fontconfig/
+gcloud/
+gh/
+git/
+github-copilot/
+gnome-initial-setup-done
+go/
+google-chrome-beta/
+google-chrome-unstable/
+google-chrome/
+grobi.conf
+gtk-3.0/
+gtk-4.0/
+gtkrc
+gtkrc-2.0
+gwenviewrc
+home-manager/
+htop/
+i3-resurrect/
+i3/config
+ipvanish/
+jj/
+kactivitymanagerd-statsrc
+kactivitymanagerdrc
+kaizen/
+kate-externaltoolspluginrc
+kate/
+katerc
+kateschemarc
+katevirc
+kcminputrc
+kconf_updaterc
+kde.org/
+kded5rc
+kdedefaults/
+kdeglobals
+kglobalshortcutsrc
+khotkeysrc
+kitty/kitty.conf
+kmixrc
+kscreenlockerrc
+ksmserverrc
+ktimezonedrc
+kwalletrc
+kwinrc
+kwinrulesrc
+kxkbrc
+libreoffice/
+microsoft-edge-dev/
+mimeapps.list
+msmtp/
+mutt/
+netsurf/
+ngrok/
+nix/
+nixpkgs/
+nushell/
+obs-studio/
+okularpartrc
+okularrc
+op/
+picom/
+plasma-localerc
+plasma-org.kde.plasma.desktop-appletsrc
+plasmashellrc
+powermanagementprofilesrc
+rio/
+smplayer/
+sops-nix/
+spectaclerc
+startkderc
+syncthing-keys/
+syncthing/
+systemd/
+task/
+tmux/tmux.conf
+transmission/
+user-dirs.conf
+user-dirs.dirs
+user-dirs.locale
+vivaldi-snapshot/
+vlc/
+xsettingsd/
+zsh/
