reverting back to 25.05 to get firefox to build on darwin

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,20 @@ wezterm/
 yarr/
 KeeWeb/
 net.imput.helium/
+.DS_Store
+@quark/
+B6CFCBFF9D438A21
+bugwarrior/
+elinks/
+iterm2/
+karabiner/
+lxc/
+mpv/
+openstack/
+private-key.asc
+raycast/
+terragrunt/
+wireshark/
+zed/.tmp*
+zed/prompts/*
+zed/embeddings/*
