--- a/zed/settings.json
+++ b/zed/settings.json
@@ -14,7 +14,6 @@
     "terraform": true
   },
   "features": {
-    "copilot": false,
     "edit_prediction_provider": "none"
   },
   "auto_update": false,
@@ -24,18 +23,17 @@
   "cursor_blink": true,
   "unnecessary_code_fade": 0.5,
   "notification_panel": {
-    "button": false,
+    "button": false
   },
   "agent": {
     "inline_assistant_model": {
-      "provider": "zed.dev",
-      "model": "claude-sonnet-4"
+      "provider": "anthropic",
+      "model": "claude-sonnet-4-5-latest"
     },
     "default_model": {
-      "provider": "zed.dev",
-      "model": "claude-sonnet-4"
+      "provider": "anthropic",
+      "model": "claude-sonnet-4-5-latest"
     },
-    "provider": null,
     "enabled": true
   },
   "outline_panel": {
@@ -67,6 +65,7 @@
     "button": false
   },
   "project_panel": {
+    "hide_hidden": true,
     "git_status": true,
     "button": false,
     "dock": "left",
@@ -74,15 +73,16 @@
   "git_panel": {
     "dock": "right"
   },
-  "git": {
-    "enabled": true,
-    "git_status": true
-  },
   "ui_font_family": "ComicShannsMono Nerd Font Mono",
   "ui_font_size": 18,
   "vim_mode": true,
   "vim": {
     "use_system_clipboard": "always"
+  },
+
+  "minimap": {
+    "show": "auto",
+    "thumb": "hover",
   },
   "scroll_beyond_last_line": "off",
   "vertical_scroll_margin": 0,
@@ -271,6 +271,12 @@
       }
     }
   },
+  "agent_servers": {
+    "opencode": {
+      "command": "opencode",
+      "args": ["acp"]
+    }
+  },
   "language_models": {
     "ollama": {
       "api_url": "http://localhost:11434",
@@ -282,6 +288,9 @@
           "keep_alive": "5m"
         }
       ]
+    },
+    "openai": {
+      "api_url": "https://api.openai.com/v1"
     }
   }
 }
